--- a/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
@@ -4,35 +4,35 @@
     ViewData["Title"] = "登入";
 }
 
-<div class="container-fluid">
-    <h1>登入</h1>
+<div class="container px-5 pt-5">
+    <h1 class="text-center">登入</h1>
     <hr />
-    <div class="row">
-        <div class="col-12">
-            <form asp-action="Login">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="UserName" class="control-label"></label>
-                    <input asp-for="UserName" class="form-control" />
-                    <span asp-validation-for="UserName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password" class="control-label"></label>
-                    <input asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
-                <div class="form-group">
-                    <input type="submit" value="登入" class="btn btn-outline-primary" />
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <div>
-        <a asp-action="Index" asp-controller="Home">回首頁</a>
+    <div class="w-50 m-auto">
+        <form asp-action="Login">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="UserName" class="control-label"></label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
+            <div class="form-group">
+                <button type="submit" class="btn-login-custom m-auto d-block">
+                    登入
+                    <span></span><span></span><span></span><span></span>
+                </button>
+            </div>
+        </form>
     </div>
 </div>
+@section topCss{
+    <link href="~/css/account/login.css" asp-append-version="true" rel="stylesheet" />
+}
 @section endJS{
     <partial name="_ValidationScriptsPartial" />
 }
