--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -9,12 +9,12 @@
 <div class="container-fluid">
     <h1>交換訂單詳情</h1>
     <form action="~/Buyer/BarterOrderDetails" method="post">
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1">
             <h2>@Model.Trade - </h2>
             <h3>@Model.Status</h3>
         </div>
         <h2>@Html.DisplayNameFor(model => model.DenyReason)</h2>
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1">
             <p>@Model.DenyReason</p>
             @if (Model.Status == "待確認" || Model.Status == "已成立")
             {
@@ -29,37 +29,42 @@
                 <p>@Model.DenyReason</p>
             }
         </div>
-        <h2>對方的商品 @Model.BuyerName</h2>
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                <img src="/Images/Users/@Model.BuyerId/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+        <div class="d-flex">
+            <div class="w-50">
+                <h2>對方的商品 @Model.BuyerName</h2>
+                <div class="p-2 product-card my-1">
+                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px; background-color: white;">
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.BuyerISBN.Substring(3,3)}/{Model.BuyerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                    </div>
+                    <div class="container-fluid my-2">
+                        <h2>@Model.BuyerTitle</h2>
+                        <h3>@Model.Trade</h3>
+                        <p><span>@Html.DisplayNameFor(model => model.BuyerISBN) </span><span>@Model.BuyerISBN</span></p>
+                        <p><span>@Html.DisplayNameFor(model => model.BuyerAuthor) </span><span>@Model.BuyerAuthor</span></p>
+                    </div>
+                    <div class="action d-flex justify-content-around align-items-center">
+                        <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-info p-3"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                    </div>
+                </div>
             </div>
-            <div class="container-fluid my-2">
-                <h2>@Model.BuyerTitle</h2>
-                <h2>@Model.Trade</h2>
-                <p><span>@Html.DisplayNameFor(model => model.BuyerISBN) </span><span>@Model.BuyerISBN</span></p>
-                <p><span>@Html.DisplayNameFor(model => model.BuyerAuthor) </span><span>@Model.BuyerAuthor</span></p>
-            </div>
-            <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+            <div class="w-50">
+                <h2>我的商品 @Model.SellerName</h2>
+                <div class="p-2 product-card my-1">
+                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                    </div>
+                    <div class="container-fluid my-2">
+                        <h2>@Model.SellerTitle</h2>
+                        <h3>@Model.Trade</h3>
+                        <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
+                        <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
+                    </div>
+                    <div class="action d-flex justify-content-around align-items-center">
+                        <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info p-3"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <h2>我的商品 @Model.SellerName</h2>
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                <img src="/Images/Users/@Model.SellerId/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-            </div>
-            <div class="container-fluid my-2">
-                <h2>@Model.SellerTitle</h2>
-                <h2>@Model.Trade</h2>
-                <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
-                <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
-            </div>
-            <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
-            </div>
-        </div>
-        <br />
         <div class="d-flex">
             @if (Model.Status == "已成立")
             {
