--- a/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
@@ -7,9 +7,9 @@
     ViewBag.Title = $"{(ViewBag.trade == "交換" ? "交換" : "買賣")}訂單紀錄";
 }
 
-<div class="container-fluid gap-10px">
+<div class="container-fluid">
     <h1>@(ViewBag.trade == "交換" ? "交換" : "買賣")訂單紀錄</h1>
-    <ul class="nav nav-pills my-3 gap-10px">
+    <ul class="nav nav-pills my-3">
         <li class="nav-item d-flex">
             <a href="@Url.Action("MySales", "Buyer", new {status = "全部", trade = ViewBag.trade})" class="text-decoration-none status" style="@(Model.StatusPage == "全部" ? "color: red; border-bottom: 2px solid red;" : "")">全部</a>
             <span style="color: red;">@Model.OrdersCount["全部"] </span>
@@ -39,15 +39,13 @@
     {
         @foreach (var item in Model.Orders)
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                    <img src="/Images/Users/@item.SellerId/Products/@item.SellerProductId/@item.SellerImage1" asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+            <div class="p-2 product-card my-1">
+                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.SellerISBN.Substring(3, 3)}/{item.SellerISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                 </div>
                 <div class="container-fluid">
                     <h2>@item.SellerName</h2>
                     <h2>@item.SellerTitle</h2>
-                    <p>@item.Trade</p>
-                    <p>@item.Status</p>
                     @if (item.Trade.Contains("買賣"))
                     {
                         <h2>NT$@(decimal.Round(item.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(item.SellerUnitPrice, 0))</h2>
@@ -65,15 +63,13 @@
     {
         @foreach (var item in Model.BarterOrders)
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                    <img src="/Images/Users/@item.SellerId/Products/@item.SellerProductId/@item.SellerImage1" asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+            <div class="p-2 d-flex align-items-center product-card my-1">
+                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px; background-color: white;">
+                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.SellerISBN.Substring(3, 3)}/{item.SellerISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                 </div>
                 <div class="container-fluid">
                     <h2>@item.SellerName</h2>
                     <h2>@item.SellerTitle</h2>
-                    <p>@item.Trade</p>
-                    <p>@item.Status</p>
                     <p><span>@Html.DisplayNameFor(model => model.Order.DenyReason)</span><span>@item.DenyReason</span></p>
                 </div>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
@@ -85,7 +81,7 @@
     }
     else
     {
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+        <div class="p-2 d-flex align-items-center product-card my-1">
             <h2 class="my-5">沒有訂單在列表中</h2>
         </div>
     }
