--- a/CoreMVC5_UsedBookProject/Views/Buyer/OrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/OrderDetails.cshtml
@@ -31,35 +31,40 @@
             }
             <p><span>@Html.DisplayNameFor(model => model.Status) </span><span>@Model.Status</span></p>
         </div>
-        <h2>賣家的商品 @Model.SellerName</h2>
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                <img src="/Images/Users/@Model.SellerId/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-            </div>
-            <div class="container-fluid my-2">
-                <h2>@Model.SellerTitle</h2>
-                <h2>@Model.Trade</h2>
-                <h2>NT$@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</h2>
-                <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
-                <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
-            </div>
-            <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
-            </div>
-        </div>
-        <br />
         <div class="d-flex">
-            @if (Model.Status == "已成立")
-            {
-                <input type="hidden" name="OrderId" value="@Model.OrderId">
-                <input type="hidden" name="trade" value="@Model.Trade">
-                <button type="submit" class="btn btn-primary mr-2" name="submit" value="完成訂單">完成訂單</button>
-            }
-            @if (Model.Status == "待確認" || Model.Status == "已成立")
-            {
-                <button type="submit" class="btn btn-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
-            }
-            <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
+            <div class="w-50">
+                <h2>賣家的商品 @Model.SellerName</h2>
+                <div class="p-2 product-card my-1">
+                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                    </div>
+                    <div class="container-fluid my-2">
+                        <h2>@Model.SellerTitle</h2>
+                        <h3>@Model.Trade</h3>
+                        <h3>NT$@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</h3>
+                        <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
+                        <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
+                    </div>
+                    <div class="action d-flex justify-content-around align-items-center">
+                        <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info p-3"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                    </div>
+                </div>
+            </div>
+            <div class="w-50">
+                <div class="d-flex">
+                    @if (Model.Status == "已成立")
+                    {
+                        <input type="hidden" name="OrderId" value="@Model.OrderId">
+                        <input type="hidden" name="trade" value="@Model.Trade">
+                        <button type="submit" class="btn btn-primary mr-2" name="submit" value="完成訂單">完成訂單</button>
+                    }
+                    @if (Model.Status == "待確認" || Model.Status == "已成立")
+                    {
+                        <button type="submit" class="btn btn-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
+                    }
+                    <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
+                </div>
+            </div>
         </div>
     </form>
 </div>
