--- a/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
@@ -5,43 +5,54 @@
 }
 <div class="container-fluid">
     <h1>購物車</h1>
-
-    @if (Model != null && Model.Products.Count > 0)
-    {
-        @foreach (var item in Model.Products)
+    <div class="row">
+        @if (Model.Products.Count > 0)
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                    <img src="/Images/Users/@item.CreateBy/Products/@item.ProductId/@item.Image1" asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+            @foreach (var item in Model.Products)
+            {
+                <div class="col-12 col-xl-6">
+                    <div class="p-2 product-card">
+                        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                            <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") class="m-auto w-100" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        </div>
+                        <div class="container-fluid my-2">
+                            <h2>@item.Title</h2>
+                            <h2>@item.Trade</h2>
+                            @if (item.Trade.Contains("買賣"))
+                            {
+                                <h2>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h2>
+                            }
+                            <p><span>@Html.DisplayNameFor(model => model.Product.ISBN) </span><span>@item.ISBN</span></p>
+                            <p><span>@Html.DisplayNameFor(model => model.Product.Author) </span><span>@item.Author</span></p>
+                            @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+                            {
+                                @if (item.CreateBy == User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value)
+                                {
+                                    <h3 class="text-danger">自己的商品</h3>
+                                }
+                            }
+                            @if (item.Trade.Contains("買賣"))
+                            {
+                                <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="btn btn-outline-primary p-3">購買</a>
+                            }
+                            @if (item.Trade.Contains("交換"))
+                            {
+                                <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="btn btn-outline-primary p-3">交換</a>
+                            }
+                        </div>
+                    </div>
                 </div>
-                <table class="container-fluid">
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.ProductId)</td><td>@item.ProductId</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.Title)</td><td>@item.Title</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.ISBN)</td><td>@item.ISBN</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.Author)</td><td>@item.Author</td></tr>
-                    @if (item.Trade == "買賣")
-                    {
-                        <tr><td>@Html.DisplayNameFor(model => model.Product.UnitPrice)</td><td>@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</td></tr>
-                    }
-                    else if (item.Trade == "交換")
-                    {
-                        <tr><td>@Html.DisplayNameFor(model => model.Product.Trade)</td><td>@item.Trade</td></tr>
-                    }
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.Status)</td><td>@item.Status</td></tr>
-                </table>
-                <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                    <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="btn btn-primary mt-2">詳情</a>
-                    <a href="@Url.Action("DeleteFromShoppingcart", "Buyer", new {ProductId=@item.ProductId})" class="btn btn-danger mt-2">移除</a>
+            }
+        }
+        else
+        {
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="p-2 product-card">
+                    <h2 class="my-5">購物車是空的</h2>
                 </div>
             </div>
         }
-    }
-    else
-    {
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <h2 class="my-5">購物車是空的</h2>
-        </div>
-    }
+    </div>
 </div>
 @section topCSS{
     <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
