--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -26,43 +26,40 @@
             <p>若賣場中有此商品將顯示<span class="text-success">賣場有此商品</span>，</p>
             <p>否則顯示<span class="text-danger">賣場尚無此商品</span>。</p>
         </div>
-    </div>
-    @if (Model.Wishs.Count > 0)
-    {
-        @foreach (var item in Model.Wishs)
+        @if (Model.Wishs.Count > 0)
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                    @if(item.ISBN.Length == 10)
-                    {
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(2,3)}/{item.ISBN.Substring(3,7)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-                    }
-                    @if (item.ISBN.Length == 13)
-                    {
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-                    }
+            @foreach (var item in Model.Wishs)
+            {
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1">
+                        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                            <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        </div>
+                        <table class="container-fluid">
+                            <tr><td>@Html.DisplayNameFor(model => model.Title)</td><td>@item.Title</td></tr>
+                            <tr><td>@Html.DisplayNameFor(model => model.ISBN)</td><td>@item.ISBN</td></tr>
+                            <tr><td>@Html.DisplayNameFor(model => model.UserName)</td><td>@item.UserName</td></tr>
+                        </table>
+                        <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
+                            <p class="mb-0 @(Model.Titleproducts.Contains(item.Title) == true ? "text-success" : "text-danger")">@(Model.Titleproducts.Contains(item.Title) == true ? "賣場有此商品" : "賣場尚無此商品")</p>
+                            <a href="@Url.Action("SearchProducts", "Home", new {name = item.Title})" class="btn btn-primary mt-2">以書名搜尋</a>
+                            <p class="mb-0 @(Model.ISBNproducts.Contains(item.ISBN) == true ? "text-success" : "text-danger")">@(Model.ISBNproducts.Contains(item.ISBN) == true ? "賣場有此商品" : "賣場尚無此商品")</p>
+                            <a href="@Url.Action("SearchProducts", "Home", new {name = item.ISBN})" class="btn btn-primary mt-2">以ISBN搜尋</a>
+                            <a href="@Url.Action("DeleteBook", "Buyer", new {Id = item.WishId})" class="btn btn-danger mt-2">刪除</a>
+                        </div>
+                    </div>
                 </div>
-                <table class="container-fluid">
-                    <tr><td>@Html.DisplayNameFor(model => model.Title)</td><td>@item.Title</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.ISBN)</td><td>@item.ISBN</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.UserName)</td><td>@item.UserName</td></tr>
-                </table>
-                <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                    <p class="mb-0 @(Model.Titleproducts.Contains(item.Title) == true ? "text-success" : "text-danger")">@(Model.Titleproducts.Contains(item.Title) == true ? "賣場有此商品" : "賣場尚無此商品")</p>
-                    <a href="@Url.Action("SearchProducts", "Home", new {name = item.Title})" class="btn btn-primary mt-2">以書名搜尋</a>
-                    <p class="mb-0 @(Model.ISBNproducts.Contains(item.ISBN) == true ? "text-success" : "text-danger")">@(Model.ISBNproducts.Contains(item.ISBN) == true ? "賣場有此商品" : "賣場尚無此商品")</p>
-                    <a href="@Url.Action("SearchProducts", "Home", new {name = item.ISBN})" class="btn btn-primary mt-2">以ISBN搜尋</a>
-                    <a href="@Url.Action("DeleteBook", "Buyer", new {Id = item.WishId})" class="btn btn-danger mt-2">刪除</a>
+            }
+        }
+        else
+        {
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="p-2 product-card">
+                    <h2 class="my-5">願望清單是空的</h2>
                 </div>
             </div>
         }
-    }
-    else
-    {
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <h2 class="my-5">願望清單是空的</h2>
-        </div>
-    }
+    </div>
     <partial name="_NowPageWishsPartial" />
 </div>
 @section topCSS{
