--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
-@model ProductEditViewModel
+@model ProductViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -9,11 +9,11 @@
 <div class="container-fluid">
     <h1>商品詳情</h1>
     <p class="text-danger" id="error">@TempData["Message"]</p>
-    <partial name="~/Views/Seller/DetailTablePartial/Swiper.cshtml" />
+    <partial name="~/Views/Seller/DetailsTablePartial/Swiper.cshtml" />
     <form action="~/Buyer/Details" method="post">
-        <partial name="~/Views/Seller/DetailTablePartial/ProductInformation.cshtml" />
-        <partial name="~/Views/Seller/DetailTablePartial/SaleInformation.cshtml" />
-        <partial name="~/Views/Seller/DetailTablePartial/OtherInformation.cshtml" />
+        <partial name="~/Views/Seller/DetailsTablePartial/ProductInformation.cshtml" />
+        <partial name="~/Views/Seller/DetailsTablePartial/SaleInformation.cshtml" />
+        <partial name="~/Views/Seller/DetailsTablePartial/OtherInformation.cshtml" />
         <input type="hidden" name="ProductId" class="form-control" value="@Model.ProductId" readonly />
         <input type="hidden" id="CreateBy" class="form-control" value="@Model.CreateBy" readonly />
         @if (User.Identity.IsAuthenticated)
@@ -23,79 +23,11 @@
                 <input type="hidden" id="MeId" class="form-control" value="@User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value" readonly />
             }
         }
-        <br />
-        @if (Model.Trade.Contains("買賣"))
-        {
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop" onclick="checklogin()" >
-                購買
-            </button>
-            @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
-            {
-                @if(User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value != Model.CreateBy)
-                {
-                    <!-- Modal -->
-                    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel" style="color:red">確認一下!!</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    確認要送出購買訂單?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                                    <a href="@Url.Action("CreateOrder", "Buyer", new {ProductId=Model.ProductId, Sellername = Model.CreateBy, trade = Model.Trade, Order = "買賣"})" class="btn btn-primary">確認</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
-            }
-        }
-        @if (Model.Trade.Contains("交換"))
-        {
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop2" onclick="checklogin()">
-                交換
-            </button>
-            @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
-            {
-                @if (User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value != Model.CreateBy)
-                {
-                    <!-- Modal -->
-                    <div class="modal fade" id="staticBackdrop2" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel" style="color:red">確認一下!!</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    確認要送出交換訂單?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                                    <a href="@Url.Action("CreateOrder", "Buyer", new {ProductId=Model.ProductId, Sellername = Model.CreateBy, trade = Model.Trade, Order = "交換"})" class="btn btn-primary">確認</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
-            }
-        }
-        <button type="button" class="btn btn-secondary my-2" id="shoppingcart" value="@Model.ProductId">增加至購物車</button>
     </form>
 
 </div>
 @section topCSS{
-    <link href="~/css/seller/detailtablepartial.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/css/Seller/DetailsTablePartial.css" asp-append-version="true" rel="stylesheet" />
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="~/lib/Swiper/swiper-bundle.min.css" />
@@ -108,7 +40,7 @@
     <script src="~/lib//Swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
     <script src="~/js/Swiper/Swiper.js"></script>
-    <script src="~/js/seller/detailtablepartial.js" asp-append-version="true"></script>
+    <script src="~/js/Seller/DetailsTablePartial.js" asp-append-version="true"></script>
     <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
     <script src="~/js/home/details.js" asp-append-version="true"></script>
 }
