--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -3,44 +3,34 @@
 @{
     ViewData["Title"] = $"{(ViewBag.Trade == "交換" ? "交換" : "買賣")}賣場";
 }
-
 <div class="container-fluid">
     <h1>@(ViewBag.Trade == "交換" ? "交換" : "買賣")賣場</h1>
-    <p>@ViewBag.Count</p>
-    <div class="row py-2">
+    <div class="d-flex justify-content-between flex-wrap">
         @if (Model.Products.Count > 0)
         {
             @foreach (var item in Model.Products)
             {
-                <div class="col-12 col-xl-6">
-                    <div class="p-2 m-auto product-card d-flex w-100 h-100">
-                        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                            <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;" class="d-flex align-items-center"><img src="/Images/Users/@item.CreateBy/Products/@item.ProductId/@item.Image1" class="m-auto w-100" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" /></a>
-                        </div>
-                        <div class="container-fluid my-2">
-                            <h2>@item.Title</h2>
-                            <h2>@item.Trade</h2>
-                            @if (item.Trade.Contains("買賣"))
-                            {
-                                <h2>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h2>
-                            }
-                            <p><span>@Html.DisplayNameFor(model => model.Product.ISBN) </span><span>@item.ISBN</span></p>
-                            <p><span>@Html.DisplayNameFor(model => model.Product.Author) </span><span>@item.Author</span></p>
-                            @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
-                            {
-                                @if (item.CreateBy == User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value)
-                                {
-                                    <h3 class="text-danger">自己的商品</h3>
-                                }
-                            }
-                        </div>
+                <div class="p-2 product-shop-card my-1">
+                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                    </div>
+                    <div class="container-fluid my-2">
+                        <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})"><h2 title="@item.Title">@item.Title</h2></a>
+                        @if (item.Trade.Contains("買賣"))
+                        {
+                            <h3>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h3>
+                        }
+                        else
+                        {
+                            <h3>&nbsp;</h3>
+                        }
                     </div>
                 </div>
             }
         }
         else
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px w-100">
+            <div class="p-2 product-card">
                 <h2 class="my-5">沒有上架的商品</h2>
             </div>
         }
