--- a/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
@@ -8,90 +8,93 @@
 }
 <div class="container-fluid">
     <h1>交換訂單詳情</h1>
-    <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-        <h2>@Model.Trade - </h2>
-        <h3>@Model.Status</h3>
-    </div>
-    <h2>@Html.DisplayNameFor(model => model.DenyReason)</h2>
-    <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-        <p>@Model.DenyReason</p>
-    </div>
-    <h2>我的商品 @Model.SellerName</h2>
-    <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-            <img src="/Images/Users/@Model.SellerId/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-        </div>
-        <div class="container-fluid my-2">
-            <h2>@Model.SellerTitle</h2>
-            <h2>@Model.Trade</h2>
-            <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
-            <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
-        </div>
-        <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-            <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
-        </div>
-    </div>
-    <h2>對方的商品 @Model.BuyerName</h2>
-    <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-            <img src="/Images/Users/@Model.BuyerId/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-        </div>
-        <div class="container-fluid my-2">
-            <h2>@Model.BuyerTitle</h2>
-            <h2>@Model.Trade</h2>
-            <p><span>@Html.DisplayNameFor(model => model.BuyerISBN) </span><span>@Model.BuyerISBN</span></p>
-            <p><span>@Html.DisplayNameFor(model => model.BuyerAuthor) </span><span>@Model.BuyerAuthor</span></p>
-        </div>
-        <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-            <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
-        </div>
-    </div>
-    <br />
     <div class="d-flex">
-        @if (Model.Status == "待確認")
-        {
-            <form action="~/Seller/BarterOrderDetails" method="post">
-                <input type="hidden" name="OrderId" value="@Model.OrderId">
-                <input type="hidden" name="trade" value="@Model.Trade">
-                <button type="submit" class="btn btn-outline-danger mr-2" name="submit" value="拒絕交換">拒絕交換</button>
-            </form>
-        }
-        @if (Model.Status == "待取消")
-        {
-            <form action="~/Seller/BarterOrderDetails" method="post">
-                <input type="hidden" name="OrderId" value="@Model.OrderId">
-                <input type="hidden" name="trade" value="@Model.Trade">
-                <button type="submit" class="btn btn-outline-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
-            </form>
-        }
-        <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">取消</button>
+        <div style="width: 33%;">
+            <h2 class="text-center">我的商品 @Model.SellerName</h2>
+            <div class="p-2 product-card my-1">
+                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.SellerISBN.Substring(3,3)}/{Model.SellerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                </div>
+                <div class="container-fluid my-2">
+                    <h2>@Model.SellerTitle</h2>
+                    <h3>@Model.Trade</h3>
+                    <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
+                    <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
+                </div>
+                <div class="action d-flex justify-content-around align-items-center">
+                    <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-outline-info p-3"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                </div>
+            </div>
+        </div>
+        <div style="width: 33%;">
+            <h2>@Model.Trade - <span>@Model.Status</span></h2>
+            <h2>購買者 - <span>@Model.BuyerName</span></h2>
+            <h2>@Html.DisplayNameFor(model => model.DenyReason)</h2>
+            <div class="p-2 d-flex flex-column flex-md-row align-items-center my-1">
+                <p>@Model.DenyReason</p>
+            </div>
+            <div class="d-flex">
+                @if (Model.Status == "待確認")
+                {
+                    <form action="~/Seller/BarterOrderDetails" method="post">
+                        <input type="hidden" name="OrderId" value="@Model.OrderId">
+                        <input type="hidden" name="trade" value="@Model.Trade">
+                        <button type="submit" class="btn btn-outline-danger mr-2" name="submit" value="拒絕交換">拒絕交換</button>
+                    </form>
+                }
+                @if (Model.Status == "待取消")
+                {
+                    <form action="~/Seller/BarterOrderDetails" method="post">
+                        <input type="hidden" name="OrderId" value="@Model.OrderId">
+                        <input type="hidden" name="trade" value="@Model.Trade">
+                        <button type="submit" class="btn btn-outline-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
+                    </form>
+                }
+                <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">取消</button>
+            </div>
+        </div>
+        <div style="width: 33%;">
+            <h2 class="text-center">對方的商品 @Model.BuyerName</h2>
+            <div class="p-2 product-card my-1">
+                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px; background-color: white;">
+                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.BuyerISBN.Substring(3,3)}/{Model.BuyerISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                </div>
+                <div class="container-fluid my-2">
+                    <h2>@Model.BuyerTitle</h2>
+                    <h3>@Model.Trade</h3>
+                    <p><span>@Html.DisplayNameFor(model => model.BuyerISBN) </span><span>@Model.BuyerISBN</span></p>
+                    <p><span>@Html.DisplayNameFor(model => model.BuyerAuthor) </span><span>@Model.BuyerAuthor</span></p>
+                </div>
+                <div class="action d-flex justify-content-around align-items-center">
+                    <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-outline-info p-3"><i class="bi bi-info-circle"></i> 商品詳情</a>
+                </div>
+            </div>
+        </div>
     </div>
     @if (Model.Products.Count > 0 && Model.Status == "待確認")
     {
         <h2 class="text-center my-5">對方已上架書籍</h2>
         @foreach (var item in Model.Products)
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                    <img src="/Images/Products/@item.ProductId/@item.Image1" asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+            <div class="p-2 product-card my-1">
+                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px; background-color: white;">
+                    <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                 </div>
-                <table class="container-fluid">
-                    <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@item.ProductId</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.SellerTitle)</td><td>@item.Title</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.SellerISBN)</td><td>@item.ISBN</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.SellerAuthor)</td><td>@item.Author</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@item.Trade</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@item.Status</td></tr>
-                </table>
-                <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                    <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 詳情</a>
+                <div class="container-fluid my-2">
+                    <h2>@Model.SellerTitle</h2>
+                    <h2>@Model.Trade</h2>
+                    <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
+                    <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
+                </div>
+                <div class="action d-flex justify-content-around align-items-center">
+                    <a href="@Url.Action("Details", "Buyer", new {ProductId = item.ProductId})" class="btn btn-outline-info p-3"><i class="bi bi-info-circle"></i> 詳情</a>
                     @if (Model.Status == "待確認")
                     {
                         <form action="~/Seller/BarterOrderDetails" method="post">
                             <input type="hidden" name="OrderId" value="@Model.OrderId">
                             <input type="hidden" name="trade" value="@Model.Trade">
                             <input type="hidden" name="ProductId" value="@item.ProductId">
-                            <button type="submit" class="btn btn-outline-primary mt-2" name="submit" value="接受與此書交換">接受與此書交換</button>
+                            <button type="submit" class="btn btn-outline-primary p-3" name="submit" value="接受與此書交換">接受與此書交換</button>
                         </form>
                     }
                 </div>
