--- a/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
-@model ProductEditViewModel
+@model ProductViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -8,50 +8,14 @@
 }
 <div class="container-fluid">
     <h1>商品詳情</h1>
-    <partial name="~/Views/Seller/DetailTablePartial/Swiper.cshtml" />
-    <partial name="~/Views/Seller/DetailTablePartial/ProductInformation.cshtml" />
-    <partial name="~/Views/Seller/DetailTablePartial/SaleInformation.cshtml" />
-    <partial name="~/Views/Seller/DetailTablePartial/OtherInformation.cshtml" />
+    <partial name="~/Views/Seller/DetailsTablePartial/Swiper.cshtml" />
+    <partial name="~/Views/Seller/DetailsTablePartial/ProductInformation.cshtml" />
+    <partial name="~/Views/Seller/DetailsTablePartial/SaleInformation.cshtml" />
+    <partial name="~/Views/Seller/DetailsTablePartial/OtherInformation.cshtml" />
     <input type="hidden" name="ProductId" class="form-control" value="@Model.ProductId" readonly />
-    <br />
-    <div>
-        @if (Model.Status == "已上架" || Model.Status == "未上架")
-        {
-            <a href="@Url.Action("Edit", "Seller", new {ProductId = Model.ProductId})" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i> 編輯</a>
-        }
-        @if (Model.Status == "未上架")
-        {
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#staticBackdrop">
-                <i class="bi bi-trash"></i> 刪除
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="staticBackdropLabel">確認刪除?</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            確認移至刪除區?
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">取消</button>
-                            <a href="@Url.Action("Delete", "Seller", new {ProductId = Model.ProductId, Trade = Model.Trade})" class="btn btn-outline-danger mt-2"><i class="bi bi-trash"></i> 刪除</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        }
-        <button type="button" onclick="history.go(-1)" class="btn btn-outline-secondary disable-onbeforeunload">取消</button>
-    </div>
 </div>
 @section topCSS{
-    <link href="~/css/seller/detailtablepartial.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/css/Seller/DetailsTablePartial.css" asp-append-version="true" rel="stylesheet" />
 
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="~/lib/Swiper/swiper-bundle.min.css" />
@@ -63,5 +27,5 @@
     <script src="~/lib//Swiper/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
     <script src="~/js/Swiper/Swiper.js"></script>
-    <script src="~/js/seller/detailtablepartial.js" asp-append-version="true"></script>
+    <script src="~/js/Seller/DetailsTablePartial.js" asp-append-version="true"></script>
 }
