--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/SaleInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/SaleInformation.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
-@model ProductEditViewModel
+@model ProductViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -19,8 +19,8 @@
     </thead>
     <tbody>
         <tr>
-            <td>@Html.DisplayNameFor(model => model.TradingPlaceAndTime)</td>
-            <td>@Html.DisplayFor(model => model.TradingPlaceAndTime)</td>
+            <td>@Html.DisplayNameFor(model => model.TradingRemarque)</td>
+            <td>@Html.DisplayFor(model => model.TradingRemarque)</td>
         </tr>
     </tbody>
 </table>
