--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/Swiper.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/Swiper.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
-@model ProductEditViewModel
+@model ProductViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -14,13 +14,13 @@
     }
 }
 <div class="row">
-    <div class="col-12 col-md-6">
-        <div class="mb-3 p-3">
+    <div class="col-6">
+        <div class="mb-3" style="padding: 10px 75px;">
             <!-- Swiper -->
             <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="swiper mySwiper2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; min-width: 100px; border: 1px solid black;">
-                        <img src="/Images/Users/@Model.CreateBy/Products/@Model.ProductId/@Model.Image1" asp-append-version="true" class="m-auto" alt="@Model.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.ISBN.Substring(3,3)}/{Model.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                     </div>
                     @if (list.Length > 0)
                     {
@@ -38,7 +38,7 @@
             <div thumbsSlider="" class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide d-flex align-items-center">
-                        <img src="/Images/Users/@Model.CreateBy/Products/@Model.ProductId/@Model.Image1" asp-append-version="true" class="m-auto" alt="@Model.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.ISBN.Substring(3,3)}/{Model.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                     </div>
                     @if (list.Length > 0)
                     {
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-    <div class="col-12 col-md-6">
+    <div class="col-6">
         <table class="table">
             <thead>
                 <tr>
@@ -89,10 +89,6 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>@Html.DisplayNameFor(model => model.PublicationDate)</td>
-                    <td>@Html.DisplayFor(model => model.PublicationDate)</td>
-                </tr>
-                <tr>
                     <td>@Html.DisplayNameFor(model => model.Degree)</td>
                     <td>
                         <textarea readonly>@Model.Degree</textarea>
@@ -100,5 +96,6 @@
                 </tr>
             </tbody>
         </table>
+        <partial name="~/Views/Seller/DetailsTablePartial/SwiperButton.cshtml" />
     </div>
 </div>
