--- a/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductImage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/ProductImage.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
-@model ProductEditViewModel
+@model ProductViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -21,17 +21,9 @@
             <td>
                 <input type="hidden" name="Image1" class="form-control" value="@(Model.Image1 == null ? "無圖片" : Model.Image1)" id="Image1" readonly />
                 <button type="button" class="btn btn-outline-danger d-none" id="Image1-clear" disabled>X</button>
-                <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img1" id="img1" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
-                <div class="d-flex align-items-end mt-2">
-                    <label for="file1" class="btn btn-outline-primary">
-                        <i class="bi bi-upload"></i> 選擇檔案
-                    </label>
-                    <input type="file" asp-for="File1" class="d-none" accept="image/*" id="file1" />
-                    <p id="p-file1" class="d-block ml-3">未選擇任何檔案</p>
-                </div>
-                <span asp-validation-for="File1" class="text-danger"></span>
             </td>
         </tr>
         <tr>
@@ -39,7 +31,7 @@
             <td>
                 <input type="hidden" name="Image2" class="form-control" value="@(Model.Image2 == null ? "無圖片" : Model.Image2)" id="Image2" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image2-clear">X</button>
-                <div id="img2Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img2Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img2" id="img2" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
                 <div class="d-flex align-items-end mt-2">
@@ -56,7 +48,7 @@
             <td>
                 <input type="hidden" name="Image3" class="form-control" value="@(Model.Image3 == null ? "無圖片" : Model.Image3)" id="Image3" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image3-clear">X</button>
-                <div id="img3Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img3Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img3" id="img3" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
                 <div class="d-flex align-items-end mt-2">
@@ -73,7 +65,7 @@
             <td>
                 <input type="hidden" name="Image4" class="form-control" value="@(Model.Image4 == null ? "無圖片" : Model.Image4)" id="Image4" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image4-clear">X</button>
-                <div id="img4Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img4Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img4" id="img4" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
                 <div class="d-flex align-items-end mt-2">
@@ -90,7 +82,7 @@
             <td>
                 <input type="hidden" name="Image5" class="form-control" value="@(Model.Image5 == null ? "無圖片" : Model.Image5)" id="Image5" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image5-clear">X</button>
-                <div id="img5Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img5Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img5" id="img5" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
                 <div class="d-flex align-items-end mt-2">
@@ -107,7 +99,7 @@
             <td>
                 <input type="hidden" name="Image6" class="form-control" value="@(Model.Image6 == null ? "無圖片" : Model.Image6)" id="Image6" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image6-clear">X</button>
-                <div id="img6Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img6Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img6" id="img6" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
                 <div class="d-flex align-items-end mt-2">
@@ -124,7 +116,7 @@
             <td>
                 <input type="hidden" name="Image7" class="form-control" value="@(Model.Image7 == null ? "無圖片" : Model.Image7)" id="Image7" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image7-clear">X</button>
-                <div id="img7Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img7Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img7" id="img7" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
                 <div class="d-flex align-items-end mt-2">
@@ -141,7 +133,7 @@
             <td>
                 <input type="hidden" name="Image8" class="form-control" value="@(Model.Image8 == null ? "無圖片" : Model.Image8)" id="Image8" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image8-clear">X</button>
-                <div id="img8Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img8Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img8" id="img8" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
                 <div class="d-flex align-items-end mt-2">
@@ -158,7 +150,7 @@
             <td>
                 <input type="hidden" name="Image9" class="form-control" value="@(Model.Image9 == null ? "無圖片" : Model.Image9)" id="Image9" readonly />
                 <button type="button" class="btn btn-outline-danger d-block" id="Image9-clear">X</button>
-                <div id="img9Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
+                <div id="img9Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white; background: white; border: 1px solid black;">
                     <img src="" alt="img9" id="img9" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                 </div>
                 <div class="d-flex align-items-end mt-2">
