--- a/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/SaleInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/EditTablePartial/SaleInformation.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
-@model ProductEditViewModel
+@model ProductViewModel
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -50,13 +50,13 @@
             </td>
         </tr>
         <tr>
-            <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.TradingPlaceAndTime)</td>
+            <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.TradingRemarque)</td>
             <td>
                 <div class="d-flex">
-                    <textarea asp-for="TradingPlaceAndTime" class="form-control show-length" placeholder="輸入交易地點與時間"></textarea>
-                    <p id="TradingPlaceAndTime_length" class="text-right ml-4"></p>
+                    <textarea asp-for="TradingRemarque" class="form-control show-length" placeholder="輸入交易地點與時間"></textarea>
+                    <p id="TradingRemarque_length" class="text-right ml-4"></p>
                 </div>
-                <span asp-validation-for="TradingPlaceAndTime" class="text-danger"></span>
+                <span asp-validation-for="TradingRemarque" class="text-danger"></span>
             </td>
         </tr>
     </tbody>
