--- a/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
@@ -7,104 +7,126 @@
     ViewBag.Title = $"{(ViewBag.Trade == "交換" ? "交換" : "買賣")}商品";
 }
 
-<div class="container-fluid gap-10px">
+<div class="container-fluid">
     <h1>@(ViewBag.Trade == "交換" ? "交換" : "買賣")商品</h1>
-    <p class="my-3">新增商品上限 <span style="@(Model.ProductNewLimit[0] >= Model.ProductNewLimit[1] ? "color: red;" : "color: black;")">@(Model.ProductNewLimit[0]) / @(Model.ProductNewLimit[1])</span></p>
-    <div class="d-flex my-3 gap-10px">
-        <a href="@Url.Action("Create", "Seller", new {})" class="btn @(Model.ProductNewLimit[0] >= Model.ProductNewLimit[1] ? "btn-outline-secondary" : "btn-outline-primary")" style="@(Model.ProductNewLimit[0] >= Model.ProductNewLimit[1] ? "pointer-events: none;" : "")"><i class="bi bi-plus-circle"></i> 新增商品</a>
-        <a type="button" href="https://isbn.ncl.edu.tw/NEW_ISBNNet/H30_SearchBooks.php?&Pact=DisplayAll4Simple" value="library" target="_blank" class="btn btn-outline-primary">前往國家圖書館</a>
+    <div class="d-flex my-3">
+        <p class="mb-0">新增商品上限 <span style="@(Model.ProductNewLimit[0] >= Model.ProductNewLimit[1] ? "color: red;" : "color: black;")">@(Model.ProductNewLimit[0]) / @(Model.ProductNewLimit[1])</span></p>
+        <a href="@Url.Action("Create", "Seller", new {})" class="btn @(Model.ProductNewLimit[0] >= Model.ProductNewLimit[1] ? "btn-outline-secondary" : "btn-outline-primary") ml-2" style="@(Model.ProductNewLimit[0] >= Model.ProductNewLimit[1] ? "pointer-events: none;" : "")"><i class="bi bi-plus-circle"></i> 新增商品</a>
+        <a type="button" href="https://isbn.ncl.edu.tw/NEW_ISBNNet/H30_SearchBooks.php?&Pact=DisplayAll4Simple" value="library" target="_blank" class="btn btn-outline-primary ml-2">前往國家圖書館</a>
     </div>
-    <ul class="nav nav-pills my-3 gap-10px">
-        <li class="nav-item d-flex">
-            <a href="@Url.Action("MyProducts", "Seller", new {status = "全部", trade = ViewBag.trade})" class="text-decoration-none status" style="@(Model.StatusPage == "全部" ? "color: red; border-bottom: 2px solid red;" : "")">全部</a>
-            <span style="color: red;">@Model.ProductsCount["全部"] </span>
-        </li>
-        <li class="nav-item d-flex">
-            <a href="@Url.Action("MyProducts", "Seller", new {status = "未上架", trade = ViewBag.trade})" class="text-decoration-none status" style="@(Model.StatusPage == "未上架" ? "color: red; border-bottom: 2px solid red;" : "")">未上架</a>
-            <span style="color: red;">@Model.ProductsCount["未上架"] </span>
-        </li>
-        <li class="nav-item d-flex">
-            <a href="@Url.Action("MyProducts", "Seller", new {status = "已上架", trade = ViewBag.trade})" class="text-decoration-none status" style="@(Model.StatusPage == "已上架" ? "color: red; border-bottom: 2px solid red;" : "")">架上商品</a>
-            <span style="color: red;">@Model.ProductsCount["已上架"] </span>
-        </li>
-        <li class="nav-item d-flex">
-            <a href="@Url.Action("MyProducts", "Seller", new {status = "待確認", trade = ViewBag.trade})" class="text-decoration-none status" style="@(Model.StatusPage == "待確認" ? "color: red; border-bottom: 2px solid red;" : "")">待確認</a>
-            <span style="color: red;">@Model.ProductsCount["待確認"] </span>
-        </li>
-        <li class="nav-item d-flex">
-            <a href="@Url.Action("MyProducts", "Seller", new {status = "已售完", trade = ViewBag.trade})" class="text-decoration-none status" style="@(Model.StatusPage == "已售完" ? "color: red; border-bottom: 2px solid red;" : "")">已售完</a>
-            <span style="color: red;">@Model.ProductsCount["已售完"] </span>
-        </li>
-        <li class="nav-item d-flex">
-            <a href="@Url.Action("MyProducts", "Seller", new {status = "封禁", trade = ViewBag.trade})" class="text-decoration-none status" style="@(Model.StatusPage == "封禁" ? "color: red; border-bottom: 2px solid red;" : "")">違規</a>
-            <span style="color: red;">@Model.ProductsCount["封禁"] </span>
-        </li>
-        <li class="nav-item d-flex">
-            <a href="@Url.Action("MyProducts", "Seller", new {status = "刪除", trade = ViewBag.trade})" class="text-decoration-none status" style="@(Model.StatusPage == "刪除" ? "color: red; border-bottom: 2px solid red;" : "")">刪除</a>
-            <span style="color: red;">@Model.ProductsCount["刪除"] </span>
-        </li>
-    </ul>
-    @if (Model.Products.Count > 0)
-    {
-        @foreach (var item in Model.Products)
+    <div class="d-flex justify-content-between my-3">
+        <a href="@Url.Action("MyProducts", "Seller", new {status = "全部", trade = ViewBag.trade})" class="text-decoration-none btn-status-custom" style="@(Model.StatusPage == "全部" ? "border: 2px solid red;" : "")">
+            <div>
+                <span>全部</span>
+                <span>全部 @Model.ProductsCount["全部"]</span>
+            </div>
+        </a>
+        <a href="@Url.Action("MyProducts", "Seller", new {status = "未上架", trade = ViewBag.trade})" class="text-decoration-none btn-status-custom" style="@(Model.StatusPage == "未上架" ? "border: 2px solid red;" : "")">
+            <div>
+                <span>未上架</span>
+                <span>未上架 @Model.ProductsCount["未上架"]</span>
+            </div>
+        </a>
+        <a href="@Url.Action("MyProducts", "Seller", new {status = "已上架", trade = ViewBag.trade})" class="text-decoration-none btn-status-custom" style="@(Model.StatusPage == "已上架" ? "border: 2px solid red;" : "")">
+            <div>
+                <span>架上商品</span>
+                <span>架上商品 @Model.ProductsCount["已上架"]</span>
+            </div>
+        </a>
+        <a href="@Url.Action("MyProducts", "Seller", new {status = "待確認", trade = ViewBag.trade})" class="text-decoration-none btn-status-custom" style="@(Model.StatusPage == "待確認" ? "border: 2px solid red;" : "")">
+            <div>
+                <span>待確認</span>
+                <span>待確認 @Model.ProductsCount["待確認"]</span>
+            </div>
+        </a>
+        <a href="@Url.Action("MyProducts", "Seller", new {status = "已售完", trade = ViewBag.trade})" class="text-decoration-none btn-status-custom" style="@(Model.StatusPage == "已售完" ? "border: 2px solid red;" : "")">
+            <div>
+                <span>已售完</span>
+                <span>已售完 @Model.ProductsCount["已售完"]</span>
+            </div>
+        </a>
+        <a href="@Url.Action("MyProducts", "Seller", new {status = "封禁", trade = ViewBag.trade})" class="text-decoration-none btn-status-custom" style="@(Model.StatusPage == "封禁" ? "border: 2px solid red;" : "")">
+            <div>
+                <span>違規</span>
+                <span>違規 @Model.ProductsCount["封禁"]</span>
+            </div>
+        </a>
+        <a href="@Url.Action("MyProducts", "Seller", new {status = "刪除", trade = ViewBag.trade})" class="text-decoration-none btn-status-custom" style="@(Model.StatusPage == "刪除" ? "border: 2px solid red;" : "")">
+            <div>
+                <span>
+                    刪除
+                </span>
+                <span>刪除 @Model.ProductsCount["刪除"]</span>
+            </div>
+        </a>
+    </div>
+    <div class="d-flex justify-content-between flex-wrap">
+        @if (Model.Products.Count > 0)
         {
-            <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                    <img src="/Images/Users/@item.CreateBy/Products/@item.ProductId/@item.Image1" asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-                </div>
-                <div class="container-fluid my-2">
-                    <h2>@item.Title</h2>
-                    <h2>@item.Trade</h2>
-                    @if (item.Trade.Contains("買賣"))
-                    {
-                        <h2>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h2>
-                    }
-                    <p><span>@Html.DisplayNameFor(model => model.Product.ISBN) </span><span>@item.ISBN</span></p>
-                    <p><span>@Html.DisplayNameFor(model => model.Product.Author) </span><span>@item.Author</span></p>
-                </div>
-                <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                    <a href="@Url.Action("Details", "Seller", new {ProductId = item.ProductId})" class="btn btn-outline-info mt-2"><i class="bi bi-info-circle"></i> 詳情</a>
-                    @if (item.Status == "已上架" || item.Status == "未上架")
-                    {
-                        <a href="@Url.Action("Edit", "Seller", new {ProductId = item.ProductId})" class="btn btn-outline-warning mt-2"><i class="bi bi-pencil-square"></i> 編輯</a>
-                    }
-                    @if (item.Status == "未上架")
-                    {
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-outline-danger mt-2" data-toggle="modal" data-target="#staticBackdrop">
-                            <i class="bi bi-trash"></i> 刪除
-                        </button>
+            @foreach (var item in Model.Products)
+            {
+                <div class="p-2 product-card my-1">
+                    <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: white;">
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                    </div>
+                    <div class="container-fluid my-2">
+                        <h2 title="@item.Title">@item.Title</h2>
+                        <h3>@item.Trade</h3>
+                        @if (item.Trade.Contains("買賣"))
+                        {
+                            <h3>NT$@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</h3>
+                        }else
+                        {
+                            <h3>&nbsp;</h3>
+                        }
+                        <p><span>@Html.DisplayNameFor(model => model.Product.ISBN) </span><span>@item.ISBN</span></p>
+                        <p><span>@Html.DisplayNameFor(model => model.Product.Author) </span><span>@item.Author</span></p>
+                    </div>
+                    <div class="d-flex justify-content-around align-items-center">
+                        <a href="@Url.Action("Details", "Seller", new {ProductId = item.ProductId})" class="btn btn-outline-info p-3"><i class="bi bi-info-circle"></i> 詳情</a>
+                        @if (item.Status == "已上架" || item.Status == "未上架")
+                        {
+                            <a href="@Url.Action("Edit", "Seller", new {ProductId = item.ProductId})" class="btn btn-outline-warning p-3"><i class="bi bi-pencil-square"></i> 編輯</a>
+                        }
+                        @if (item.Status == "未上架")
+                        {
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-outline-danger p-3" data-toggle="modal" data-target="#staticBackdrop">
+                                <i class="bi bi-trash"></i> 刪除
+                            </button>
 
-                        <!-- Modal -->
-                        <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="staticBackdropLabel">確認刪除?</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        確認移至刪除區?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">取消</button>
-                                        <a href="@Url.Action("Delete", "Seller", new {ProductId = item.ProductId, Trade = item.Trade})" class="btn btn-outline-danger"><i class="bi bi-trash"></i> 刪除</a>
+                            <!-- Modal -->
+                            <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="staticBackdropLabel">確認刪除?</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            確認移至刪除區?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">取消</button>
+                                            <a href="@Url.Action("Delete", "Seller", new {ProductId = item.ProductId, Trade = item.Trade})" class="btn btn-outline-danger"><i class="bi bi-trash"></i> 刪除</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    }
+                        }
+                    </div>
                 </div>
+            }
+        }
+        else
+        {
+            <div class="p-2 d-flex align-items-center product-card my-1">
+                <h2 class="my-5">沒有商品在列表中</h2>
             </div>
         }
-    }
-    else{
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <h2 class="my-5">沒有商品在列表中</h2>
-        </div>
-    }
+    </div>
     <partial name="_NowPageMyProductsPartial" />
 </div>
 @section topCSS{
