--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdminLogin.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdminLogin.cshtml
@@ -32,7 +32,7 @@
             </nav>
         </div>
     </div>
-    <div class="imgbackground" style="max-width:2000px; margin-top:75px;">
+    <div class="imgbackground" style="margin-top:75px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
