刪除隱私中心 更改role

--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
     <footer class="border-top footer text-muted" style="background-color:white; margin-top:3px;">
         <div class="container-footer justify-content-between">
             <div class="px-2">
-                &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
+                &copy; 2023 - CoreMVC5_UsedBookProject
             </div>
             @if (User.Identity.IsAuthenticated)
             {
